main block top alignment fix. h1 adjustment. mobile container fix width

--- a/web/themes/custom/myusf/sass/src/main.scss
+++ b/web/themes/custom/myusf/sass/src/main.scss
@@ -38,6 +38,9 @@ body {
 #main {
 	margin-bottom: 1.875rem;
 }
+#block-myusf-content {
+    margin-top: .3125rem;
+}
 .row {
 	@include media-breakpoint-down(phone) {
 		margin-right: -0.9375rem;
@@ -45,7 +48,6 @@ body {
 	}
 }
 .container{
-	/*width: 96%;*/
 	width:calc(100% - 30px);
 	/*padding-left: 30px;
 	padding-right: 30px;*/
@@ -54,8 +56,9 @@ body {
 	margin-left: auto;
     margin-right: auto;
     max-width: 1500px;
-
-
+    @include media-breakpoint-down(phone) {
+    	width: 342px;
+	}
 	@include media-breakpoint-only(tablet)  { 
 		width: 97%;
 		padding-left: 1.5%;
