--- a/web/themes/custom/myusf/sass/src/partials/_typography.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_typography.scss
@@ -184,7 +184,7 @@ ul ul, ul ol, ol ol, ol ul {
 		.card-block {
 		    margin-bottom: -1.75rem;
 		}
-		
+
 		ol {
 			-webkit-padding-start: 1.25rem;
 			padding-left: 1.25rem;
@@ -737,7 +737,7 @@ h1.display-title, h1.title {
     font-size: 1.8rem;
     line-height: 1.3;
     margin-bottom: 1.25rem;
-    margin-top: -.5rem!important;
+    margin-top: -.815rem!important;
     @include media-breakpoint-down(tablet) {
     	font-size: 1.6rem;
     }
